optimized the badges for abt section, and began working on mobile responsiveness. still need to fix the contact section though

--- a/src/index.css
+++ b/src/index.css
@@ -147,13 +147,15 @@ body, button {
 .abt-grid img:nth-child(2) {
   border-color: var(--purple1);
   grid-column: 2;
-  align-self: end;
+  align-self: center;
 }
 .abt-grid img:nth-child(3) {
   grid-column: 3;
+  align-self: end;
 }
 .abt-grid img:nth-child(4) {
   grid-column: 2;
+  align-self: start;
   border-color: var(--purple2);
 }
 .abt-grid img:nth-child(5) {
@@ -732,7 +734,7 @@ body, button {
   .abt-grid img:nth-child(2) {
     width: 10em;
     height: 10em;
-    top: -20px;
+    top: 150px;
     right: 120px;
     grid-row: 4;
     grid-column: 4;
@@ -744,9 +746,13 @@ body, button {
     width: 8em;
     height: 8em;
     position: relative;
-    top: 30px;
+    top: -30px;
+    border-color: var(--purple2);
     grid-row: 5;
     grid-column: 1;
+  }
+  .abt-grid img:nth-child(3):hover {
+    box-shadow: 0px 0px 15px var(--green1);
   }
   .abt-grid img:nth-child(4), .abt-grid img:nth-child(5)  {
     display: none;
@@ -757,8 +763,11 @@ body, button {
     grid-row: 1 / span 2;
     grid-column: span 4;
   }
+  .blurp-abt p {
+    width: 72%;
+  }
   .wave-3-svg {
-    position: relative; 
+    bottom: 80vh;
     right: 100px;
   }
   /* fix project and contact */
@@ -860,60 +869,90 @@ body, button {
 
 /* Small Tablet Screen break point */
 @media screen and (max-width: 660px){
-  /* fix > make it go to 475*/
   /* hero section */
   .blurp-hero {
     width: calc(100vw - 30px);
-    padding: 15px;
+    padding: 10px;
   }
   .blurp-hero h3 {
-    font-size: 24px;
+    font-size: 22px;
     bottom: 180px;
-    left: 330px;
+    left: 180px;
   } 
   .blurp-hero h1{
-    font-size: 28px;
+    font-size: 20px;
     bottom: 120px;
-    left: 50px;
+    left: 20px;
     padding: 15px;
   }
   .blurp-hero button{
-    font-size: 24px;
+    font-size: 20px;
     bottom: 40px;
-    left: 260px;
+    left: 220px;
   }
   .blurp-hero h2{
     font-size: 18px;
     bottom: -102px;
-    left: 200px;
+    left: 120px;
+  }
+  .wave-1-svg {
+    width: 1920px;
+    position: absolute;
+    bottom: -20vh;
   }
   .wave-2-svg {
     width: 3250px;
     position: absolute;
-    bottom: -25vh;
+    bottom: -34vh;
   }
-  /* fix, change the waves here */
   /* about section */
+  .abt-grid img:nth-child(2) {
+    width: 8em;
+    height: 8em;
+    border-width: 7px;
+  }
+  .abt-grid img:nth-child(3), .abt-grid img:nth-child(4), .abt-grid img:nth-child(5)  {
+    display: none;
+  }
+  .blurp-abt {
+    padding-left: 60px;
+    padding-top: 10vh; 
+  }
+  .blurp-abt h3 {
+    font-size: 38px;
+    margin: 0;
+  }
   .blurp-abt p {
-    font-size: 24px;
+    font-size: 22px;
     top: 10px;
     right: 0px;
   }
-  /* fix */
+  .wave-3-svg {
+    bottom: 89vh;
+    right: 300px;
+    width: 3020px;
+  }
   /* project section */
+  .project-grid h3 {
+    font-size: 38px;
+    width: 140px;
+  }
   .project-grid {
     /* now a flex for ease of use */
-    margin: 50px 100px 0 100px;
-    width: calc(100% - 200px);
+    margin: 50px 8vw 0 8vw;
+    width: calc(100% - 16vw);
     display: flex;
     flex-direction: column;
-    bottom: 8vh;
-    gap: 10px;
+  }
+  .project-grid > div {
+    height: 225px;
   }
   .title-card h3 {
-    margin: 1.25em 0.5em 0.5em 0.5em;
+    font-size: 36px;
+    margin: 1.2em 0.5em 0em 0.5em;
   }
   .title-card p {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
+/* 430 now */
